--- a/Split/manifest.json
+++ b/Split/manifest.json
@@ -1,5 +1,5 @@
 {
-    "namespace": "station",
+    "namespace": "0xsplits",
     "name": "Split",
     "version": "0.0.1",
     "displayName": "Splits",
